# script-fox

./: .gitignore  .pylintrc  pyproject.toml  readme.md  script-fox.sh
app/: __main__.py  args.py  cpp.py  data.py  jsontypes.py  logging.py  typemapper.py  util.py  writers.py
