[tool.poetry]
name = "script-fox"
version = "0.1.0"
description = "Generate handler stubs and documentation for script commands"
authors = ["Pirulax <patrikjankovics7@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
